--- a/pagea.html
+++ b/pagea.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Inicio</title>
     <link rel="shortcut icon" href="images/icons/icon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -121,6 +121,6 @@
         </div>
     </div>
 </div>
-<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
