--- a/pagea.html
+++ b/pagea.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Inicio</title>
+    <title>Música</title>
     <link rel="shortcut icon" href="images/icons/stars.svg" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -32,14 +32,14 @@
                 </li>
                 <li class="nav-item">
                     <div>
-                        <a class="nav-link" href="pagea.html">
+                        <a class="nav-link" href="pageb.html">
                             <img src="images/icons/conversor.svg" alt="Logo de Conversor">
                         </a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <div>
-                        <a class="nav-link" href="pagea.html">
+                        <a class="nav-link" href="pagec.html">
                             <img src="images/icons/zodiaco.svg" alt="Logo de Signos">
                         </a>
                     </div>
