--- a/page1.html
+++ b/page1.html
@@ -32,14 +32,14 @@
                 </li>
                 <li class="nav-item">
                     <div>
-                        <a class="nav-link" href="pagea.html">
+                        <a class="nav-link" href="pageb.html">
                             <img src="images/icons/conversor.svg" alt="Logo de Conversor">
                         </a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <div>
-                        <a class="nav-link" href="pagea.html">
+                        <a class="nav-link" href="pagec.html">
                             <img src="images/icons/zodiaco.svg" alt="Logo de Signos">
                         </a>
                     </div>
