--- a/page1.html
+++ b/page1.html
@@ -48,6 +48,7 @@
         </div>
     </div>
 </nav>
+<div class="maqueta">
     <div class="container-fluid bg-warning">
         <p>menu</p>
     </div>
@@ -127,6 +128,7 @@
     <footer class="container-fluid bg-danger">
         <p>footer</p>
     </footer>
-    <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+</div>
+<script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
