--- a/pagea.html
+++ b/pagea.html
@@ -121,6 +121,11 @@
         </div>
     </div>
 </div>
+<footer class="container-fluid text-center footer-general">
+    <div>
+        © 2024 Copyright Jose Fernandez
+    </div>
+</footer>
 <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
