--- a/pagec.html
+++ b/pagec.html
@@ -48,6 +48,11 @@
         </div>
     </div>
 </nav>
+<footer class="container-fluid text-center footer-general">
+    <div>
+        © 2024 Copyright Jose Fernandez
+    </div>
+</footer>
 <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
