--- a/pagec.html
+++ b/pagec.html
@@ -48,6 +48,244 @@
         </div>
     </div>
 </nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4 col-6 boton-signo">
+            <a class="imagen-signo" href="#Aries">
+                <img src="images/signos/aries.png" alt="Aries">
+            </a>
+        </div>
+        <div class="col-md-4 col-6 boton-signo">
+            <a class="imagen-signo" href="#Tauro">
+                <img src="images/signos/tauro.png" alt="Tauro">
+            </a>
+        </div>
+        <div class="col-md-4 col-6 boton-signo">
+            <a class="imagen-signo" href="#Geminis">
+                <img src="images/signos/geminis.png" alt="Geminis">
+            </a>
+        </div>
+        <div class="col-md-4 col-6 boton-signo">
+            <a class="imagen-signo" href="#Cancer">
+                <img src="images/signos/cancer.png" alt="Cancer">
+            </a>
+        </div>
+        <div class="col-md-4 col-6 boton-signo">
+            <a class="imagen-signo" href="#Leo">
+                <img src="images/signos/leon.png" alt="Leo">
+            </a>
+        </div>
+        <div class="col-md-4 col-6 boton-signo">
+            <a class="imagen-signo" href="#Virgo">
+                <img src="images/signos/virgo.png" alt="Virgo">
+            </a>
+        </div>
+        <div class="col-md-4 col-6 boton-signo">
+            <a class="imagen-signo" href="#Libra">
+                <img src="images/signos/libra.png" alt="Libra">
+            </a>
+        </div>
+        <div class="col-md-4 col-6 boton-signo">
+            <a class="imagen-signo" href="#Escorpio">
+                <img src="images/signos/escorpio.png" alt="Escorpio">
+            </a>
+        </div>
+        <div class="col-md-4 col-6 boton-signo">
+            <a class="imagen-signo" href="#Sagitario">
+                <img src="images/signos/sagitario.png" alt="Sagitario">
+            </a>
+        </div>
+        <div class="col-md-4 col-6 boton-signo">
+            <a class="imagen-signo" href="#Capricornio">
+                <img src="images/signos/capricornio.png" alt="Capricornio">
+            </a>
+        </div>
+        <div class="col-md-4 col-6 boton-signo">
+            <a class="imagen-signo" href="#Acuario">
+                <img src="images/signos/acuario.png" alt="Acuario">
+            </a>
+        </div>
+        <div class="col-md-4 col-6 boton-signo">
+            <a class="imagen-signo" href="#Piscis">
+                <img src="images/signos/piscis.png" alt="Piscis">
+            </a>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-12">
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4 imagen-signo-card">
+                        <img src="images/signos/aries.png" class="img-fluid rounded-start" alt="Aries-Tarjeta">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body" id="Aries">
+                            <h5 class="card-title">Aries</h5>
+                            <p class="card-text"> Hoy es un dia especial para los Arianos, ya que estamos en su epoca </p>
+                            <p class="card-text"><small class="text-body-secondary">Actualizado hace 5 minutos</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4 imagen-signo-card">
+                        <img src="images/signos/tauro.png" class="img-fluid rounded-start" alt="Tauro-Tarjeta">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body" id="Tauro">
+                            <h5 class="card-title">Tauro</h5>
+                            <p class="card-text"> Hoy es un dia especial para los Tauro, ya que estamos en su epoca </p>
+                            <p class="card-text"><small class="text-body-secondary">Actualizado hace 5 minutos</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4 imagen-signo-card">
+                        <img src="images/signos/geminis.png" class="img-fluid rounded-start" alt="Geminis-Tarjeta">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body" id="Geminis">
+                            <h5 class="card-title ">Geminis</h5>
+                            <p class="card-text"> Hoy es un dia especial para los Geminis, ya que estamos en su epoca </p>
+                            <p class="card-text"><small class="text-body-secondary">Actualizado hace 5 minutos</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4 imagen-signo-card">
+                        <img src="images/signos/cancer.png" class="img-fluid rounded-start" alt="Cancer-Tarjeta">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body" id="Cancer">
+                            <h5 class="card-title">Cancer</h5>
+                            <p class="card-text"> Hoy es un dia especial para los Cancer, ya que estamos en su epoca </p>
+                            <p class="card-text"><small class="text-body-secondary">Actualizado hace 5 minutos</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4 imagen-signo-card">
+                        <img src="images/signos/leon.png" class="img-fluid rounded-start" alt="Leo-Tarjeta">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body" id="Leo">
+                            <h5 class="card-title">Leo</h5>
+                            <p class="card-text"> Hoy es un dia especial para los Leo, ya que estamos en su epoca </p>
+                            <p class="card-text"><small class="text-body-secondary">Actualizado hace 5 minutos</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4 imagen-signo-card">
+                        <img src="images/signos/virgo.png" class="img-fluid rounded-start" alt="Virgo-Tarjeta">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body" id="Virgo">
+                            <h5 class="card-title">Virgo</h5>
+                            <p class="card-text"> Hoy es un dia especial para los Virgo, ya que estamos en su epoca </p>
+                            <p class="card-text"><small class="text-body-secondary">Actualizado hace 5 minutos</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4 imagen-signo-card">
+                        <img src="images/signos/libra.png" class="img-fluid rounded-start" alt="Libra-Tarjeta">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body" id="Libra">
+                            <h5 class="card-title">Libra</h5>
+                            <p class="card-text"> Hoy es un dia especial para los Libra, ya que estamos en su epoca </p>
+                            <p class="card-text"><small class="text-body-secondary">Actualizado hace 5 minutos</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4 imagen-signo-card">
+                        <img src="images/signos/escorpio.png" class="img-fluid rounded-start" alt="Escorpio-Tarjeta">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body" id="Escorpio">
+                            <h5 class="card-title">Escorpio</h5>
+                            <p class="card-text"> Hoy es un dia especial para los Escorpio, ya que estamos en su epoca </p>
+                            <p class="card-text"><small class="text-body-secondary">Actualizado hace 5 minutos</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4 imagen-signo-card">
+                        <img src="images/signos/sagitario.png" class="img-fluid rounded-start" alt="Sagitario-Tarjeta">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body" id="Sagitario">
+                            <h5 class="card-title">Sagitario</h5>
+                            <p class="card-text"> Hoy es un dia especial para los Sagitario, ya que estamos en su epoca </p>
+                            <p class="card-text"><small class="text-body-secondary">Actualizado hace 5 minutos</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4 imagen-signo-card">
+                        <img src="images/signos/capricornio.png" class="img-fluid rounded-start" alt="Capricornio-Tarjeta">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body" id="Capricornio">
+                            <h5 class="card-title">Capricornio</h5>
+                            <p class="card-text"> Hoy es un dia especial para los Capricornio, ya que estamos en su epoca </p>
+                            <p class="card-text"><small class="text-body-secondary">Actualizado hace 5 minutos</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4 imagen-signo-card">
+                        <img src="images/signos/acuario.png" class="img-fluid rounded-start" alt="Acuario-Tarjeta">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body" id="Acuario">
+                            <h5 class="card-title">Acuario</h5>
+                            <p class="card-text"> Hoy es un dia especial para los Acuario, ya que estamos en su epoca </p>
+                            <p class="card-text"><small class="text-body-secondary">Actualizado hace 5 minutos</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4 imagen-signo-card">
+                        <img src="images/signos/piscis.png" class="img-fluid rounded-start" alt="Piscis-Tarjeta">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body" id="Piscis">
+                            <h5 class="card-title">Piscis</h5>
+                            <p class="card-text"> Hoy es un dia especial para los Piscis, ya que estamos en su epoca </p>
+                            <p class="card-text"><small class="text-body-secondary">Actualizado hace 5 minutos</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <footer class="container-fluid text-center footer-general">
     <div>
         © 2024 Copyright Jose Fernandez
