Corrigiendo la page1 y mejorando responsividad

--- a/pagea.html
+++ b/pagea.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Música</title>
     <link rel="shortcut icon" href="images/icons/stars.svg" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
@@ -85,7 +86,7 @@
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: auto;">
                         <img src="images/albums/theStory.jpeg" class="card-img-top" alt="Album de Sara Ramirez">
-                        <div class="card-body">
+                        <div class="card-body d-flex justify-content-center">
                             <h5 class="card-title">The Story</h5>
                             <p class="card-text">La actriz Sara Ramirez presenta su One Hit Wonder 'The Story'</p>
                             <a href="https://music.youtube.com/watch?v=DYA_oBwIBZM" class="btn btn-primary" target="_blank">Escuchala</a>
