--- a/pageb.html
+++ b/pageb.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversor</title>
     <link rel="shortcut icon" href="images/icons/stars.svg" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
@@ -128,7 +129,7 @@
                     <span class="input-group-text" id="">$</span>
                     <input type="text" class="form-control" placeholder="Total" disabled>
                 </div>
-                <button type="button" class="btn btn-convertir">Convertir</button>
+                <button type="button" class="btn btn-convertir w-100">Convertir</button>
             </div>
         </div>
     </div>
