--- a/pagec.html
+++ b/pagec.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendario del Zodiaco</title>
     <link rel="shortcut icon" href="images/icons/stars.svg" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
@@ -50,62 +51,62 @@
 </nav>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-4 col-6 boton-signo">
+        <div class="col-md-4 col-sm-6 col-12 boton-signo">
             <a class="imagen-signo" href="#Aries">
                 <img src="images/signos/aries.png" alt="Aries">
             </a>
         </div>
-        <div class="col-md-4 col-6 boton-signo">
+        <div class="col-md-4 col-sm-6 col-12 boton-signo">
             <a class="imagen-signo" href="#Tauro">
                 <img src="images/signos/tauro.png" alt="Tauro">
             </a>
         </div>
-        <div class="col-md-4 col-6 boton-signo">
+        <div class="col-md-4 col-sm-6 col-12 boton-signo">
             <a class="imagen-signo" href="#Geminis">
                 <img src="images/signos/geminis.png" alt="Geminis">
             </a>
         </div>
-        <div class="col-md-4 col-6 boton-signo">
+        <div class="col-md-4 col-sm-6 col-12 boton-signo">
             <a class="imagen-signo" href="#Cancer">
                 <img src="images/signos/cancer.png" alt="Cancer">
             </a>
         </div>
-        <div class="col-md-4 col-6 boton-signo">
+        <div class="col-md-4 col-sm-6 col-12 boton-signo">
             <a class="imagen-signo" href="#Leo">
                 <img src="images/signos/leon.png" alt="Leo">
             </a>
         </div>
-        <div class="col-md-4 col-6 boton-signo">
+        <div class="col-md-4 col-sm-6 col-12 boton-signo">
             <a class="imagen-signo" href="#Virgo">
                 <img src="images/signos/virgo.png" alt="Virgo">
             </a>
         </div>
-        <div class="col-md-4 col-6 boton-signo">
+        <div class="col-md-4 col-sm-6 col-12 boton-signo">
             <a class="imagen-signo" href="#Libra">
                 <img src="images/signos/libra.png" alt="Libra">
             </a>
         </div>
-        <div class="col-md-4 col-6 boton-signo">
+        <div class="col-md-4 col-sm-6 col-12 boton-signo">
             <a class="imagen-signo" href="#Escorpio">
                 <img src="images/signos/escorpio.png" alt="Escorpio">
             </a>
         </div>
-        <div class="col-md-4 col-6 boton-signo">
+        <div class="col-md-4 col-sm-6 col-12 boton-signo">
             <a class="imagen-signo" href="#Sagitario">
                 <img src="images/signos/sagitario.png" alt="Sagitario">
             </a>
         </div>
-        <div class="col-md-4 col-6 boton-signo">
+        <div class="col-md-4 col-sm-6 col-12 boton-signo">
             <a class="imagen-signo" href="#Capricornio">
                 <img src="images/signos/capricornio.png" alt="Capricornio">
             </a>
         </div>
-        <div class="col-md-4 col-6 boton-signo">
+        <div class="col-md-4 col-sm-6 col-12 boton-signo">
             <a class="imagen-signo" href="#Acuario">
                 <img src="images/signos/acuario.png" alt="Acuario">
             </a>
         </div>
-        <div class="col-md-4 col-6 boton-signo">
+        <div class="col-md-4 col-sm-6 col-12 boton-signo">
             <a class="imagen-signo" href="#Piscis">
                 <img src="images/signos/piscis.png" alt="Piscis">
             </a>
