--- a/page1.html
+++ b/page1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="shortcut icon" href="images/icons/stars.svg" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
@@ -48,86 +49,48 @@
         </div>
     </div>
 </nav>
-<div class="maqueta">
-    <div class="container-fluid bg-warning">
-        <p>menu</p>
+<div class="container-fluid maqueta">
+    <div class="row">
+        <div class="col-12 bg-danger">
+            <p>Menu</p>
+        </div>
+        <div class="col-md-6 col-sm-12 bg-info">
+            <p>img1</p>
+        </div>
+        <div class="col-md-6 d-none d-md-block bg-info">
+            <p>img2</p>
+        </div>
+        <div class="col-12 bg-info">
+            <p>img3</p>
+        </div>
+        <div class="col-md-3 col-sm-4 col-6 bg-success">
+            <p>Art 1</p>
+        </div>
+        <div class="col-md-3 col-sm-4 col-6 bg-success">
+            <p>Art 2</p>
+        </div>
+        <div class="col-md-3 col-sm-4 col-6 bg-success">
+            <p>Art 3</p>
+        </div>
+        <div class="col-md-3 col-sm-4 col-6 bg-success">
+            <p>Art 4</p>
+        </div>
+        <div class="col-md-3 col-sm-4 col-6 bg-success">
+            <p>Art 5</p>
+        </div>
+        <div class="col-md-3 col-sm-4 col-6 bg-success">
+            <p>Art 6</p>
+        </div>
+        <div class="col-md-3 col-sm-4 col-6 bg-success">
+            <p>Art 7</p>
+        </div>
+        <div class="col-md-3 col-sm-4 col-6 bg-success">
+            <p>Art 8</p>
+        </div>
+        <footer class="col-12 bg-warning">
+            <p>footer</p>
+        </footer>
     </div>
-    <div class="container-fluid bg-info">
-        <div class="row">
-            <div class="col-sm-12 col-md-6">
-                <p>img1</p>
-            </div>
-            <div class="col-md-6 d-none d-md-block">
-                <p>img2</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <p>img3</p>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid bg-success">
-        <div class="row">
-            <div class="col-6 col-sm-4 col-md-3">
-                <p>Art</p>
-            </div>
-            <div class="col-6 col-sm-4 col-md-3">
-                <p>Art</p>
-            </div>
-            <div class="d-none d-sm-block col-sm-4 col-md-3">
-                <p>Art</p>
-            </div>
-            <div class="d-none d-md-block col-md-3">
-                <p>Art</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-6 col-sm-4 col-md-3">
-                <p>Art</p>
-            </div>
-            <div class="col-6 col-sm-4 col-md-3">
-                <p>Art</p>
-            </div>
-            <div class="d-none d-sm-block col-sm-4 col-md-3">
-                <p>Art</p>
-            </div>
-            <div class="d-none d-md-block col-md-3">
-                <p>Art</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-6 col-sm-4 col-md-3">
-                <p>Art</p>
-            </div>
-            <div class="col-6 col-sm-4 col-md-3">
-                <p>Art</p>
-            </div>
-            <div class="d-none d-sm-block col-sm-4 col-md-3">
-                <p>Art</p>
-            </div>
-            <div class="d-none d-md-block col-md-3">
-                <p>Art</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-6 col-sm-4 col-md-3">
-                <p>Art</p>
-            </div>
-            <div class="col-6 col-sm-4 col-md-3">
-                <p>Art</p>
-            </div>
-            <div class="d-none d-sm-block col-sm-4 col-md-3">
-                <p>Art</p>
-            </div>
-            <div class="d-none d-md-block col-md-3">
-                <p>Art</p>
-            </div>
-        </div>
-    </div>
-    <footer class="container-fluid bg-danger">
-        <p>footer</p>
-    </footer>
 </div>
 <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
