--- a/pagea.html
+++ b/pagea.html
@@ -54,12 +54,12 @@
         <div class="col-sm-12 col-md-9">
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="card" style="width: auto;">
+                    <div class="card pb-0">
                         <img src="images/albums/whatCanISay.jpeg" class="card-img-top" alt="Album de BrandiCarlile">
                         <div class="card-body">
                             <h5 class="card-title">what can I say?</h5>
                             <p class="card-text">Una canción de la banda sonora de la exitosa serie Anatomia de Grey</p>
-                            <a href="https://www.youtube.com/watch?v=BAikRDZajuM" class="btn btn-primary" target="_blank">Escuchala</a>
+                            <a href="https://www.youtube.com/watch?v=BAikRDZajuM" class="btn btn-primary d-block" target="_blank">Escuchala</a>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                         <div class="card-body">
                             <h5 class="card-title">where does the good go?</h5>
                             <p class="card-text">Un exito de Tegan y Sara del Album 'So Jealous'</p>
-                            <a href="https://music.youtube.com/watch?v=VFLzZY3w3vg" class="btn btn-primary" target="_blank">Escuchala</a>
+                            <a href="https://music.youtube.com/watch?v=VFLzZY3w3vg" class="btn btn-primary d-block" target="_blank">Escuchala</a>
                         </div>
                     </div>
                 </div>
@@ -79,17 +79,17 @@
                         <div class="card-body">
                             <h5 class="card-title">Universe And U</h5>
                             <p class="card-text">Un exito musical del 2004 de la artista KT Tunstall </p>
-                            <a href="https://www.youtube.com/watch?v=dMD2Riybg0E" class="btn btn-primary" target="_blank">Escuchala</a>
+                            <a href="https://www.youtube.com/watch?v=dMD2Riybg0E" class="btn btn-primary d-block" target="_blank">Escuchala</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: auto;">
                         <img src="images/albums/theStory.jpeg" class="card-img-top" alt="Album de Sara Ramirez">
-                        <div class="card-body d-flex justify-content-center">
+                        <div class="card-body">
                             <h5 class="card-title">The Story</h5>
                             <p class="card-text">La actriz Sara Ramirez presenta su One Hit Wonder 'The Story'</p>
-                            <a href="https://music.youtube.com/watch?v=DYA_oBwIBZM" class="btn btn-primary" target="_blank">Escuchala</a>
+                            <a href="https://music.youtube.com/watch?v=DYA_oBwIBZM" class="btn btn-primary d-block w-100" target="_blank">Escuchala</a>
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                         <div class="card-body">
                             <h5 class="card-title">The Winner Takes It All</h5>
                             <p class="card-text">El exito de ABBA 'The Winner Takes It All' te sigue en tu mejor momento</p>
-                            <a href="https://music.youtube.com/watch?v=WbnG3eAGb6Y" class="btn btn-primary" target="_blank">Escuchala</a>
+                            <a href="https://music.youtube.com/watch?v=WbnG3eAGb6Y" class="btn btn-primary d-block" target="_blank">Escuchala</a>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Friends</h5>
                             <p class="card-text">Anne Marie presenta un exito en conjunto al famoso DJ Marshmello</p>
-                            <a href="https://music.youtube.com/watch?v=lPaFesZWRug" class="btn btn-primary" target="_blank">Escuchala</a>
+                            <a href="https://music.youtube.com/watch?v=lPaFesZWRug" class="btn btn-primary d-block" target="_blank">Escuchala</a>
                         </div>
                     </div>
                 </div>
