Actualizando el style.css y pagea.html

--- a/pagea.html
+++ b/pagea.html
@@ -151,7 +151,7 @@
             <div class="modal-body align-items-center justify-content-center d-flex flex-column">
                 <p class="mb-3">Un exito de Tegan y Sara del Album 'So Jealous'</p>
                 <div class="d-flex justify-content-center align-items-center">
-                    <iframe width="315" height="315" src="https://www.youtube.com/embed/Etk09imuZ9g?si=GOrt41MXtu9VaBR7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="315" height="315" src="https://www.youtube.com/embed/VFLzZY3w3vg?si=iCwjGLBSGm8JliIx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="modal-footer">
